--- a/package.json
+++ b/package.json
@@ -39,5 +39,5 @@
   "devDependencies": {
     "gh-pages": "^3.2.3"
   },
-  "homepage": "http://jmeno1011.github.io/noServerSideProject"
+  "homepage": "http://jmeno1011.github.io/noServerSideProject/"
 }
