--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "@iconify/react": "^3.1.4",
     "gh-pages": "^3.2.3"
   },
   "homepage": "http://jmeno1011.github.io/noServerSideProject/"
