--- a/package.json
+++ b/package.json
@@ -44,5 +44,5 @@
     "@iconify/react": "^3.1.4",
     "gh-pages": "^3.2.3"
   },
-  "homepage": "http://jmeno1011.github.io/noServerSideProject/"
+  "homepage": "http://jmeno1011.github.io/prac_etc/"
 }
