--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.25.0",
     "classnames": "^2.3.1",
     "d3": "^7.4.4",
+    "firebase": "^9.14.0",
     "immer": "^9.0.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
